[gd_scene load_steps=11 format=2]

[ext_resource path="res://Backgroundconcept.png" type="Texture" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.741176 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.0980392 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.705882 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Theme" id=2]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 5 )
CheckBox/styles/focus = SubResource( 7 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 6 )
CheckBox/styles/normal = SubResource( 6 )
CheckBox/styles/pressed = SubResource( 6 )
OptionButton/styles/focus = SubResource( 8 )
OptionButton/styles/hover = SubResource( 6 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 6 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -200, 656 )
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.03125
anchor_top = 0.04
anchor_right = 0.297156
anchor_bottom = 0.146333
margin_right = -0.288
margin_bottom = 0.200001
text = "TRBACK"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox" type="CheckBox" parent="."]
anchor_left = 0.0625
anchor_top = 0.32
anchor_right = 0.398187
anchor_bottom = 0.439667
margin_right = 0.255999
margin_bottom = 0.199999
text = "TRFS"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OptionButton" type="OptionButton" parent="."]
anchor_left = 0.062
anchor_top = 0.533333
anchor_right = 0.398
anchor_bottom = 0.653333
margin_left = 0.511997
margin_top = -1.52588e-05
margin_right = 0.447968
margin_bottom = -3.05176e-05
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Transition" parent="." instance=ExtResource( 3 )]
modulate = Color( 0, 0.345098, 0.286275, 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
